--- a/layouts/shortcodes/collapse_inner.html
+++ b/layouts/shortcodes/collapse_inner.html
@@ -7,7 +7,7 @@ border-radius: var(--radius);
 padding: 0.5em; margin-bottom: 20px; margin-top: 20px;">
     <details class="details" {{ if (eq (.Get "openByDefault") true) }} open=true {{ end }} style = "
     padding: 0px 20px;">
-    <summary markdown="span" style="cursor: pointer; outline: none;">
+    <summary markdown="span" style="cursor: pointer; outline: none; font-weight: 500;">
         {{ .Get "summary" | markdownify }}
     </summary>
         {{ .Inner | markdownify }}
