--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,8 +7,19 @@
       {{- if .Draft }}<div class="entry-isdraft"><sup>&nbsp;&nbsp;[draft]</sup></div>{{- end }}
     </h1>
     {{- if .Params.hideMeta }}{{ else }}
-    <div class="post-meta">
+    <div class="post-meta" width="100%">
       {{- partial "post_meta.html" . -}}
+      <div class="likely likely" data-url="{{ .Permalink }}" data-title="{{ .Title }} | {{ .Site.Title }}" style="position: absolute; right: calc(var(--gap)); ">
+        <div class="vkontakte"></div>
+        <div class="facebook"></div>
+        <div class="twitter"></div>
+        <div class="telegram"></div>
+        <div class="whatsapp"></div>
+        <div class="odnoklassniki"></div>
+        <!-- <div class="linkedin"></div> -->
+        <!-- <div class="pinterest" data-media="i/pinnable.jpg"></div> -->
+    </div>
+    
       {{- if .IsTranslated -}}&nbsp;|&nbsp;
       <ul class="i18n_list">
         {{- i18n "translations" | default "Translations"}}:
@@ -26,9 +37,17 @@
       </ul>
       {{- end }}
     </div>
+    {{- if .Params.tags }}
+    <ul class="post-tags" style="padding-top: 8px;">
+      {{- range ($.GetTerms "tags") }}
+      <li><a href="{{ .Permalink }}" style="font-size: 12px; line-height: 22px; padding-inline: 8px;">{{ .LinkTitle }}</a></li>
+      {{- end }}
+    </ul>
+    {{- end }}
     {{- end}}
   </header>
   {{- partial "cover.html" (dict "cxt" . "IsHome" false) }}
+ 
   {{- if .Params.ShowToc }}
   <div class="toc">
     <details {{if .Params.TocOpen }} open{{ end }}>
@@ -48,7 +67,7 @@
     {{- if .Params.tags }}
     <ul class="post-tags">
       {{- range ($.GetTerms "tags") }}
-      <li><a href="{{ .Permalink }}">{{ .LinkTitle }}</a></li>
+      <li><a href="{{ .Permalink }}"  style="font-size: 12px; line-height: 22px; padding-inline: 8px;">{{ .LinkTitle }}</a></li>
       {{- end }}
     </ul>
     {{- end }}
