--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -34,6 +34,8 @@
 {{- else}}
 <link href="{{ $stylesheet.Permalink }}" rel="preload stylesheet" as="style">
 {{- end}}
+{{ $likelyJS := resources.Get "js/likely.js" | resources.Minify | resources.Fingerprint }}
+<script src="{{ $likelyJS.Permalink }}" integrity="{{ $likelyJS.Data.Integrity }}"></script>
 <!-- Search -->
 {{- if (eq .Layout `search`) -}}
 <link rel="preload" as="fetch" href="../index.json" crossOrigin="anonymous">
