--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -69,8 +69,19 @@
       {{- range ($.GetTerms "tags") }}
       <li><a href="{{ .Permalink }}"  style="font-size: 12px; line-height: 22px; padding-inline: 8px;">{{ .LinkTitle }}</a></li>
       {{- end }}
+      
     </ul>
     {{- end }}
+    <div class="likely likely-big" data-url="{{ .Permalink }}" data-title="{{ .Title }} | {{ .Site.Title }}" >
+        <div class="vkontakte"></div>
+        <div class="facebook"></div>
+        <div class="twitter"></div>
+        <div class="telegram"></div>
+        <div class="whatsapp"></div>
+        <div class="odnoklassniki"></div>
+        <!-- <div class="linkedin"></div> -->
+        <!-- <div class="pinterest" data-media="i/pinnable.jpg"></div> -->
+    </div>
     {{- if (and .Site.Params.ShowShareButtons (ne .Params.disableShare true) ) }}
     {{- partial "share_icons.html" . }}
     {{- end }}
