--- a/assets/css/post-entry.css
+++ b/assets/css/post-entry.css
@@ -52,9 +52,9 @@
     transform: scale(.96)
 }
 
-.tag-entry .entry-cover {
+/*.tag-entry .entry-cover {
     display: none
-}
+}*/
 
 .entry-header h2 {
     font-size: 24px
