--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,15 +7,18 @@
       {{- if .Draft }}<div class="entry-isdraft"><sup>&nbsp;&nbsp;[draft]</sup></div>{{- end }}
     </h1>
     {{- if .Params.hideMeta }}{{ else }}
-    <div class="post-meta" width="100%">
+    <div class="post-meta" width="100%" style="margin-top: 10px;">
       {{- partial "post_meta.html" . -}}
+      &nbsp;·&nbsp;&nbsp;<svg focusable="false" viewBox="0 0 24 24" aria-hidden="true" width='15'>
+          <path style="fill: rgba(0, 0, 0, 0.56);" d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"/>
+        </svg>&nbsp;<span id="hitman-counter"></span>
       <div class="likely likely" data-url="{{ .Permalink }}" data-title="{{ .Title }} | {{ .Site.Title }}" style="position: absolute; right: calc(var(--gap)); ">
         <div class="vkontakte"></div>
         <div class="facebook"></div>
         <div class="twitter"></div>
         <div class="telegram"></div>
         <div class="whatsapp"></div>
-        <div class="odnoklassniki"></div>
+        <!-- <div class="odnoklassniki"></div> -->
         <!-- <div class="linkedin"></div> -->
         <!-- <div class="pinterest" data-media="i/pinnable.jpg"></div> -->
     </div>
