--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -12,7 +12,7 @@
     {{- if .Params.hideMeta }}{{ else }}
     <div class="post-meta" width="100%" style="margin-top: 10px;">
       {{- partial "post_meta.html" . -}}
-      &nbsp;·&nbsp;&nbsp;<svg focusable="false" viewBox="0 0 24 24" aria-hidden="true" width='15' style="display: inline-block;">
+      &nbsp;·&nbsp;&nbsp;<svg viewBox="0 0 24 24" aria-hidden="true" width='15px' height="15px" style="margin-top: 4px;" >
           <path style="fill: rgba(0, 0, 0, 0.56);" d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"/>
         </svg>&nbsp;<span id="hitman-counter"></span>
       <div class="likely likely" data-url="{{ .Permalink }}" data-title="{{ .Title }} | {{ .Site.Title }}" style="position: absolute; right: calc(var(--gap)); ">
