Add script for tracking 404 in plausible

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,3 +1,4 @@
 {{ define "main" }}
+<script>plausible("404", { props: { path: document.location.pathname } });</script>
 <div class="not-found">404</div>
-{{ end  }}{{/* end main */}}
+{{ end }}{{/* end main */}}
